--- a/index.html
+++ b/index.html
@@ -1,34 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="script.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Password Generator</h1>
-      </header>
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
-        </div>
-        <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
-        </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
-        </div>
-      </div>
+    <style>
+       
+       .container {
+            margin: auto;
+            width: 900px;
+        }
+
+        .img-thumbnail {
+            width: 210px;
+            height: 160px;
+            margin-right: 30px;
+        }
+        
+        .p {
+            font-size: 18px;
+            font-weight: 400;
+        }
+
+    </style>
+</head>
+
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Secure Password</h1>
+        <p class="lead">Generate an easy and secure random password!</p>
     </div>
-  </body>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3">
+            <img class="img img-thumbnail" src="https://www.trzcacak.rs/myfile/detail/447-4470759_lock-clipart-security-lock-clip-art-secure.png">
+        </div>
+
+        <div class="col-md-9">
+            <h3>Your Password:</h3>
+            <input type="text" id="yourPw" size="30"/><br><br>
+            <button id="submit" button type="button" class="btn btn-warning">Submit</button><br>
+            <h4>How many characters?</h4>
+            <input type="number" id="charNum" value="12" min="4" max="20" /> <br><br>  
+            <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="num" value="option1">
+                    <label class="form-check-label" for="inlineRadio1">Include number</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="sym" value="option2">
+                    <label class="form-check-label" for="inlineRadio2">Include symbol</label>
+                  </div>
+
+        </div>
+    </div>
+</div>
+
+<script src="script.js" type="text/javascript"></script>
+</body>
+
 </html>
