--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="sym" value="option2">
                     <label class="form-check-label" for="inlineRadio2">Include symbol</label>
                   </div>
+                  <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="cap" value="option2">
+                        <label class="form-check-label" for="inlineRadio2">Include capital</label>
+                      </div>
 
         </div>
     </div>
