added checkboxes for multiple options

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
             <h4>How many characters?</h4>
             <input type="number" id="charNum" value="12" min="8" max="128" /> <br><br>  
             <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="num" value="option1">
+                    <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="num" value="option1">
                     <label class="form-check-label" for="inlineRadio1">Include number</label>
                   </div>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="sym" value="option2">
+                    <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="sym" value="option2">
                     <label class="form-check-label" for="inlineRadio2">Include symbol</label>
                   </div>
                   <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="cap" value="option2">
+                        <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="cap" value="option2">
                         <label class="form-check-label" for="inlineRadio2">Include capital</label>
                       </div>
 
